RESOLVED FIXED40526
[GStreamer] can't seek past maxTimeLoaded value
https://bugs.webkit.org/show_bug.cgi?id=40526
Summary [GStreamer] can't seek past maxTimeLoaded value
Philippe Normand
Reported 2010-06-12 08:01:44 PDT
When progressive download of the media is enabled it is currently impossible to seek pas to the maxTimeLoaded value because maxTimeSeekable() returns it. Making that method return the value of duration() should fix the issue.
Attachments
proposed patch (2.16 KB, patch)
2010-06-28 09:56 PDT, Philippe Normand
no flags
proposed patch (2.06 KB, patch)
2010-07-02 07:17 PDT, Philippe Normand
xan.lopez: review+
Philippe Normand
Comment 1 2010-06-28 09:56:44 PDT
Created attachment 59904 [details] proposed patch
Sebastian Dröge (slomo)
Comment 2 2010-06-28 12:50:44 PDT
Works good for me, thanks. Please get this into the next 1.2 release too
Xan Lopez
Comment 3 2010-07-01 14:31:54 PDT
Comment on attachment 59904 [details] proposed patch Makes sense to me.
Philippe Normand
Comment 4 2010-07-02 01:49:04 PDT
WebKit Review Bot
Comment 5 2010-07-02 02:10:00 PDT
http://trac.webkit.org/changeset/62371 might have broken GTK Linux 32-bit Release
Philippe Normand
Comment 6 2010-07-02 02:54:15 PDT
Breaks media/controls-drag-timebar.html on 32-Bit GTK Release. --- /var/lib/buildbot/build/gtk-linux-32-release/build/layout-test-results/media/controls-drag-timebar-expected.txt 2010-07-02 02:44:46.000000000 -0700 +++ /var/lib/buildbot/build/gtk-linux-32-release/build/layout-test-results/media/controls-drag-timebar-actual.txt 2010-07-02 02:44:46.000000000 -0700 @@ -8,6 +8,6 @@ EVENT(seeked) Time: 2.7 EVENT(seeked) -Time: 3.2 +Time: 3.5 END OF TEST
Philippe Normand
Comment 7 2010-07-02 02:54:40 PDT
Comment on attachment 59904 [details] proposed patch Clearing flags
Philippe Normand
Comment 8 2010-07-02 02:58:11 PDT
(In reply to comment #6) > Breaks media/controls-drag-timebar.html on 32-Bit GTK Release. > And of course this test passes fine for me :P I'll try to reproduce it on my laptop and investigate the failure if I reproduce it. Otherwise I'd appreciate a gst debug log from kov's bot when it runs DRT with the patch applied for the failing test.
Philippe Normand
Comment 9 2010-07-02 07:11:26 PDT
I was able to reproduce the failure on my laptop. The patch introduced a change of behavior of updateStates() that triggered the issue. A new patch is coming ;)
Philippe Normand
Comment 10 2010-07-02 07:17:30 PDT
Created attachment 60365 [details] proposed patch
Xan Lopez
Comment 11 2010-07-06 09:46:50 PDT
Comment on attachment 60365 [details] proposed patch OK!
Philippe Normand
Comment 12 2010-07-06 10:18:15 PDT
Landed as http://trac.webkit.org/changeset/62561 with a new comment, as discussed with Xan. Thanks!
Note You need to log in before you can comment on or make changes to this bug.